--- a/css/faleconosco.css
+++ b/css/faleconosco.css
@@ -28,7 +28,7 @@ header
 
 /*Página abaixo do cabeçalho*/
 #wrapper{
-    height:1800px;
+    
 }
 
 .barra_superior{
@@ -103,6 +103,14 @@ nav a.btn_destaque{
     text-align: center;
 }
 
+.texto_acima_form
+{
+    margin-top:40px;
+    
+    font-family:Trebuchet MS;
+    font-size:40px ;
+    width:600px
+}
 
 /*Sessão do formulário*/
 form
@@ -116,7 +124,7 @@ form
     border: 1px solid #CCC;
     border-radius: 1em;
     
-    margin-top:100px;
+    margin-top:70px;
 }
 
 input, textarea
@@ -161,6 +169,49 @@ button
 }
 
 
+/*Sessão das Redes sociais*/
+
+.texto_redes_sociais
+{
+    margin-top:80px;
+    margin-bottom:90px;
+    font-family:Trebuchet MS;
+    font-size:40px ;
+    width:600px
+}
+
+/*Alinha a sessão ao centro da página*/
+.sec_redes_sociais
+{
+    width:1000px;
+    margin:0 auto;
+}
+
+.redes_sociais
+{
+    font-family:Trebuchet MS;
+    font-size:15px;
+    width:150px;
+    margin-left:60px;
+    float:left;
+}
+
+.redes_sociais:hover
+{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
+
+.redes_sociais img
+{
+    padding-left:50px;
+    width:150px;
+}
 
 
 /*Parte do rodapé*/
