--- a/css/termosdeuso.css
+++ b/css/termosdeuso.css
@@ -109,7 +109,7 @@ li
 
 footer
 {
-    
+    width:100%;
 }
 
 /*Esta classe foi criada para colocar todas as informações do footer em uma só para que pudesse
