--- a/css/politicadeprivacidade.css
+++ b/css/politicadeprivacidade.css
@@ -115,7 +115,7 @@ li
 
 footer
 {
-    width:auto;
+    width:100%;
 }
 
 /*Esta classe foi criada para colocar todas as informações do footer em uma só para que pudesse
