--- a/css/produtosemarcas.css
+++ b/css/produtosemarcas.css
@@ -37,6 +37,7 @@ header
     max-width: 960px;
     width: 100%;
     margin: 0 auto;
+    font-family: Trebuchet MS;
 }
 
 /* links de navegacao da pagina */
@@ -50,7 +51,7 @@ nav{
 nav a{
     color: rgb(187, 187, 187); 
     text-decoration: none; /*tira o underline do link */
-    font-family: 
+    font-family: Trebuchet MS;
 }
 
 nav a.btn_destaque{
