--- a/css/ondeestamos.css
+++ b/css/ondeestamos.css
@@ -65,7 +65,7 @@ header
     max-width: 960px;
     width: 100%;
     margin: 0 auto;
-    
+    font-family: Trebuchet MS;
 }
 
 /* links de navegacao da pagina */
@@ -79,7 +79,7 @@ nav{
 nav a{
     color: rgb(187, 187, 187); 
     text-decoration: none; /*tira o underline do link */
-    
+    font-family: Trebuchet MS;
 }
 
 nav a.btn_destaque{
