--- a/css/termosdeuso.css
+++ b/css/termosdeuso.css
@@ -50,7 +50,7 @@ nav{
 nav a{
     color: rgb(187, 187, 187); 
     text-decoration: none; /*tira o underline do link */
-    font-family: 
+    font-family:Trebuchet MS;
 }
 
 nav a.btn_destaque{
